updated for hypernym viz

--- a/notebooks/mj/Vocab-Shrunk.ipynb
+++ b/notebooks/mj/Vocab-Shrunk.ipynb
@@ -1571,15 +1571,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 141,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# get the presence for each hypernym use within decade\n",
-    "# 1 if found, otherwise, 0\n",
-    "def populateDecadeHypes(comp,decade,thype):\n",
+    "# add up the synonym counts\n",
+    "def populateDecadeHypes(hcomp,decade,thype,scomp):\n",
     "    \n",
     "    # set decade\n",
     "    didx = decades.index(decade)\n",
@@ -1591,14 +1591,18 @@
     "    #loop over corpus hype, k=hypernym, v= list of synonyms\n",
     "    for h,syns in chype.iteritems():\n",
     "        if h in dhype:\n",
-    "            comp[h][didx] = 1 \n",
+    "            \n",
+    "            # loop over the syns \n",
+    "            for syn in syns:\n",
+    "                if syn in scomp:\n",
+    "                    hcomp[h][didx] += scomp[syn][didx] \n",
     "    \n",
-    "    return comp"
+    "    return hcomp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 142,
    "metadata": {
     "collapsed": false
    },
@@ -1619,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 143,
    "metadata": {
     "collapsed": false
    },
@@ -1627,12 +1631,12 @@
    "source": [
     "# comp for nouns\n",
     "for d in decades:\n",
-    "    nhcomp = populateDecadeHypes(nhcomp,d,(cnhype,dnhypes))"
+    "    nhcomp = populateDecadeHypes(nhcomp,d,(cnhype,dnhypes), nscomp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 144,
    "metadata": {
     "collapsed": false
    },
@@ -1642,7 +1646,7 @@
      "output_type": "stream",
      "text": [
       "shop\n",
-      "[1, 1, 1, 1, 0]\n"
+      "[2, 2, 2, 2, 0]\n"
      ]
     }
    ],
@@ -1654,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 145,
    "metadata": {
     "collapsed": true
    },
@@ -1662,12 +1666,12 @@
    "source": [
     "# comp for adjs\n",
     "for d in decades:\n",
-    "    ahcomp = populateDecadeHypes(ahcomp,d,(cahype,dahypes))"
+    "    ahcomp = populateDecadeHypes(ahcomp,d,(cahype,dahypes), ascomp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 146,
    "metadata": {
     "collapsed": false
    },
@@ -1677,7 +1681,7 @@
      "output_type": "stream",
      "text": [
       "exclusive\n",
-      "[0, 0, 0, 1, 0]\n"
+      "[0, 0, 0, 2, 0]\n"
      ]
     }
    ],
@@ -1696,7 +1700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 147,
    "metadata": {
     "collapsed": true
    },
@@ -1707,7 +1711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 148,
    "metadata": {
     "collapsed": false
    },
@@ -1731,10 +1735,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>shop</td>\n",
        "    </tr>\n",
@@ -1758,19 +1762,19 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>summer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>flicker</td>\n",
        "    </tr>\n",
@@ -1780,14 +1784,14 @@
       ],
       "text/plain": [
        "   1970  1980  1990  2000  2010        word\n",
-       "0     1     1     1     1     0        shop\n",
+       "0     2     2     2     2     0        shop\n",
        "1     0     0     0     0     0  impression\n",
        "2     0     0     0     0     0        bait\n",
-       "3     1     1     1     1     1      summer\n",
-       "4     0     1     1     1     0     flicker"
+       "3     2     2     2     2     2      summer\n",
+       "4     0     2     2     2     0     flicker"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1798,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 149,
    "metadata": {
     "collapsed": true
    },
@@ -1809,7 +1813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 150,
    "metadata": {
     "collapsed": false
    },
@@ -1836,7 +1840,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>exclusive</td>\n",
        "    </tr>\n",
@@ -1844,16 +1848,16 @@
        "      <th>1</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>brumous</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>diffident</td>\n",
@@ -1861,8 +1865,8 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>particular</td>\n",
@@ -1871,8 +1875,8 @@
        "      <th>4</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>grateful</td>\n",
        "    </tr>\n",
@@ -1882,14 +1886,14 @@
       ],
       "text/plain": [
        "   1970  1980  1990  2000  2010        word\n",
-       "0     0     0     0     1     0   exclusive\n",
-       "1     0     0     1     1     1     brumous\n",
-       "2     0     1     1     0     0   diffident\n",
-       "3     0     1     1     0     0  particular\n",
-       "4     0     0     1     1     0    grateful"
+       "0     0     0     0     2     0   exclusive\n",
+       "1     0     0     0     0     0     brumous\n",
+       "2     0     0     0     0     0   diffident\n",
+       "3     0     2     2     0     0  particular\n",
+       "4     0     0     2     2     0    grateful"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1907,7 +1911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 151,
    "metadata": {
     "collapsed": true
    },
