fixed 5 decade spanning words

--- a/notebooks/mj/Vocab-Shrunk.ipynb
+++ b/notebooks/mj/Vocab-Shrunk.ipynb
@@ -2295,6 +2295,474 @@
    "source": [
     "dataframeToCsv(hanvdf,\"master-lyricsdf-word_syn_hype_vectors.csv\",root_out=\"../../data/conditioned/\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Save Additional Data For Viz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{u'adult': u'adult',\n",
+       " u'affair': u'matter',\n",
+       " u'aim': u'purpose',\n",
+       " u'airplane': u'airplane',\n",
+       " u'anguish': u'anguish',\n",
+       " u'animal': u'animal',\n",
+       " u'answer': u'answer',\n",
+       " u'arena': u'sphere',\n",
+       " u'ass': u'buttocks',\n",
+       " u'asshole': u'asshole',\n",
+       " u'athlete': u'athlete',\n",
+       " u'attempt': u'attempt',\n",
+       " u'automobile': u'car',\n",
+       " u'autumn': u'fall',\n",
+       " u'babe': u'baby',\n",
+       " u'baby': u'baby',\n",
+       " u'baggage': u'baggage',\n",
+       " u'bait': u'bait',\n",
+       " u'bandana': u'bandanna',\n",
+       " u'bandanna': u'bandanna',\n",
+       " u'bang': u'knock',\n",
+       " u'bar': u'barroom',\n",
+       " u'barkeeper': u'bartender',\n",
+       " u'bartender': u'bartender',\n",
+       " u'basement': u'basement',\n",
+       " u'bastard': u'asshole',\n",
+       " u'battle': u'battle',\n",
+       " u'beast': u'animal',\n",
+       " u'blockhead': u'dunce',\n",
+       " u'bloke': u'chap',\n",
+       " u'bolt': u'thunderbolt',\n",
+       " u'boogie': u'boogie',\n",
+       " u'boogie-woogie': u'boogie',\n",
+       " u'boom': u'boom',\n",
+       " u'booty': u'loot',\n",
+       " u'booze': u'liquor',\n",
+       " u'bowel': u'intestine',\n",
+       " u'buddy': u'buddy',\n",
+       " u'bulge': u'bulge',\n",
+       " u'bullet': u'bullet',\n",
+       " u'bum': u'rotter',\n",
+       " u'buster': u'fellow',\n",
+       " u'calamity': u'calamity',\n",
+       " u'canary': u'fink',\n",
+       " u'captive': u'prisoner',\n",
+       " u'car': u'car',\n",
+       " u'career': u'career',\n",
+       " u'carpet': u'rug',\n",
+       " u'catastrophe': u'calamity',\n",
+       " u'cavity': u'pit',\n",
+       " u'cellar': u'basement',\n",
+       " u'center': u'center',\n",
+       " u'chance': u'opportunity',\n",
+       " u'chatter': u'yak',\n",
+       " u'check': u'check',\n",
+       " u'cheep': u'cheep',\n",
+       " u'cheerio': u'adieu',\n",
+       " u'cheque': u'check',\n",
+       " u'child': u'child',\n",
+       " u'chip': u'bit',\n",
+       " u'chocolate': u'cocoa',\n",
+       " u'choice': u'choice',\n",
+       " u'chump': u'chump',\n",
+       " u'chunk': u'ball',\n",
+       " u'clash': u'clang',\n",
+       " u'cloth': u'fabric',\n",
+       " u'clutch': u'clasp',\n",
+       " u'coast': u'seashore',\n",
+       " u'cocoa': u'cocoa',\n",
+       " u'come': u'semen',\n",
+       " u'come-on': u'bait',\n",
+       " u'complaint': u'ailment',\n",
+       " u'component': u'component',\n",
+       " u'conceit': u'amour_propre',\n",
+       " u'couch': u'sofa',\n",
+       " u'country': u'state',\n",
+       " u'crap': u'crap',\n",
+       " u'crash': u'clang',\n",
+       " u'craze': u'fad',\n",
+       " u'creature': u'animal',\n",
+       " u'criminal': u'criminal',\n",
+       " u'crook': u'criminal',\n",
+       " u'crop': u'crop',\n",
+       " u'curse': u'curse',\n",
+       " u'dad': u'dad',\n",
+       " u'dada': u'dad',\n",
+       " u'daddy': u'dad',\n",
+       " u'dark': u'dark',\n",
+       " u'darkness': u'dark',\n",
+       " u'dawn': u'dawn',\n",
+       " u'daydream': u'reverie',\n",
+       " u'daze': u'daze',\n",
+       " u'degree': u'degree',\n",
+       " u'derriere': u'buttocks',\n",
+       " u'destiny': u'destiny',\n",
+       " u'dice': u'die',\n",
+       " u'die': u'die',\n",
+       " u'doctor': u'doctor',\n",
+       " u'domain': u'sphere',\n",
+       " u'drama': u'play',\n",
+       " u'dribble': u'drip',\n",
+       " u'drip': u'drip',\n",
+       " u'drunk': u'drunkard',\n",
+       " u'dude': u'fellow',\n",
+       " u'dumbass': u'dunce',\n",
+       " u'dusk': u'twilight',\n",
+       " u'eating': u'eating',\n",
+       " u'ecstasy': u'ecstasy',\n",
+       " u'effect': u'consequence',\n",
+       " u'effort': u'attempt',\n",
+       " u'element': u'component',\n",
+       " u'eternity': u'eternity',\n",
+       " u'expression': u'expression',\n",
+       " u'fabric': u'fabric',\n",
+       " u'fad': u'fad',\n",
+       " u'faith': u'religion',\n",
+       " u'fall': u'fall',\n",
+       " u'family': u'family',\n",
+       " u'fanny': u'buttocks',\n",
+       " u'fashion': u'manner',\n",
+       " u'fate': u'destiny',\n",
+       " u'fault': u'mistake',\n",
+       " u'feeding': u'eating',\n",
+       " u'fella': u'chap',\n",
+       " u'fellow': u'chap',\n",
+       " u'felon': u'criminal',\n",
+       " u'fiddle': u'violin',\n",
+       " u'fight': u'battle',\n",
+       " u'filet': u'fillet',\n",
+       " u'fillet': u'fillet',\n",
+       " u'film': u'movie',\n",
+       " u'filth': u'filth',\n",
+       " u'flavor': u'spirit',\n",
+       " u'flavour': u'spirit',\n",
+       " u'flicker': u'flicker',\n",
+       " u'freak': u'freak',\n",
+       " u'fume': u'smoke',\n",
+       " u'girl': u'girl',\n",
+       " u'good-bye': u'adieu',\n",
+       " u'goodbye': u'adieu',\n",
+       " u'grand': u'thousand',\n",
+       " u'granddad': u'grandfather',\n",
+       " u'grandmother': u'grandma',\n",
+       " u'grandpa': u'grandfather',\n",
+       " u'granny': u'grandma',\n",
+       " u'grief': u'grief',\n",
+       " u'grin': u'smile',\n",
+       " u'grip': u'clasp',\n",
+       " u'grownup': u'adult',\n",
+       " u'guarantee': u'guarantee',\n",
+       " u'guardian': u'defender',\n",
+       " u'gut': u'intestine',\n",
+       " u'guy': u'guy',\n",
+       " u'hall': u'hallway',\n",
+       " u'hallway': u'hallway',\n",
+       " u'hang': u'bent',\n",
+       " u'harm': u'injury',\n",
+       " u'harvest': u'crop',\n",
+       " u'hate': u'hate',\n",
+       " u'hatred': u'hate',\n",
+       " u'hazard': u'hazard',\n",
+       " u'headache': u'concern',\n",
+       " u'heap': u'pile',\n",
+       " u'heartache': u'grief',\n",
+       " u'heartbreak': u'grief',\n",
+       " u'heaven': u'eden',\n",
+       " u'hideaway': u'hideout',\n",
+       " u'hideout': u'hideout',\n",
+       " u'hold': u'clasp',\n",
+       " u'holiday': u'vacation',\n",
+       " u'hombre': u'guy',\n",
+       " u'honkey': u'whitey',\n",
+       " u'honky': u'whitey',\n",
+       " u'hood': u'hood',\n",
+       " u'hoopla': u'ballyhoo',\n",
+       " u'hump': u'bulge',\n",
+       " u'hurt': u'injury',\n",
+       " u'hush': u'hush',\n",
+       " u'hype': u'ballyhoo',\n",
+       " u'idea': u'idea',\n",
+       " u'ill': u'ailment',\n",
+       " u'impression': u'impression',\n",
+       " u'individual': u'person',\n",
+       " u'infinity': u'eternity',\n",
+       " u'info': u'information',\n",
+       " u'information': u'information',\n",
+       " u'inside': u'inside',\n",
+       " u'intent': u'purpose',\n",
+       " u'intention': u'purpose',\n",
+       " u'interior': u'inside',\n",
+       " u'internet': u'internet',\n",
+       " u'jock': u'athlete',\n",
+       " u'kid': u'child',\n",
+       " u'kind': u'kind',\n",
+       " u'kingdom': u'kingdom',\n",
+       " u'knack': u'bent',\n",
+       " u'lad': u'chap',\n",
+       " u'laugh': u'laugh',\n",
+       " u'laughter': u'laugh',\n",
+       " u'level': u'degree',\n",
+       " u'limo': u'limousine',\n",
+       " u'limousine': u'limousine',\n",
+       " u'liquor': u'liquor',\n",
+       " u'lollipop': u'ice_lolly',\n",
+       " u'longing': u'longing',\n",
+       " u'look': u'expression',\n",
+       " u'lookout': u'lookout',\n",
+       " u'loot': u'loot',\n",
+       " u'lounge': u'sofa',\n",
+       " u'luggage': u'baggage',\n",
+       " u'lump': u'ball',\n",
+       " u'lunch': u'lunch',\n",
+       " u'luncheon': u'lunch',\n",
+       " u'lurch': u'lurch',\n",
+       " u'mac': u'macintosh',\n",
+       " u'mack': u'macintosh',\n",
+       " u'mag': u'magazine',\n",
+       " u'magazine': u'magazine',\n",
+       " u'mama': u'ma',\n",
+       " u'mamma': u'ma',\n",
+       " u'manner': u'manner',\n",
+       " u'mark': u'mark',\n",
+       " u'marriage': u'marriage',\n",
+       " u'material': u'material',\n",
+       " u'matrimony': u'marriage',\n",
+       " u'matter': u'matter',\n",
+       " u'measure': u'measure',\n",
+       " u'melody': u'tune',\n",
+       " u'menace': u'menace',\n",
+       " u'menage': u'family',\n",
+       " u'microphone': u'microphone',\n",
+       " u'middle': u'center',\n",
+       " u'mike': u'microphone',\n",
+       " u'millimeter': u'millimeter',\n",
+       " u'mini': u'miniskirt',\n",
+       " u'miniskirt': u'miniskirt',\n",
+       " u'miss': u'girl',\n",
+       " u'missy': u'girl',\n",
+       " u'mistake': u'mistake',\n",
+       " u'mm': u'millimeter',\n",
+       " u'mode': u'manner',\n",
+       " u'mold': u'cast',\n",
+       " u'mom': u'ma',\n",
+       " u'momma': u'ma',\n",
+       " u'mommy': u'ma',\n",
+       " u'monstrosity': u'freak',\n",
+       " u'moonlight': u'moonlight',\n",
+       " u'moonshine': u'moonlight',\n",
+       " u'morn': u'morning',\n",
+       " u'morning': u'morning',\n",
+       " u'motherfucker': u'asshole',\n",
+       " u'motivation': u'motivation',\n",
+       " u'motive': u'motivation',\n",
+       " u'movie': u'movie',\n",
+       " u'nation': u'state',\n",
+       " u'neighborhood': u'vicinity',\n",
+       " u'neighbourhood': u'vicinity',\n",
+       " u'net': u'internet',\n",
+       " u'nigga': u'nigger',\n",
+       " u'nigger': u'nigger',\n",
+       " u'notion': u'impression',\n",
+       " u'opportunity': u'opportunity',\n",
+       " u'pa': u'dad',\n",
+       " u'package': u'package',\n",
+       " u'packet': u'package',\n",
+       " u'pal': u'buddy',\n",
+       " u'palette': u'palette',\n",
+       " u'pallet': u'palette',\n",
+       " u'papa': u'dad',\n",
+       " u'paradise': u'eden',\n",
+       " u'past': u'past',\n",
+       " u'pay': u'wage',\n",
+       " u'pedestal': u'base',\n",
+       " u'pee': u'urine',\n",
+       " u'peep': u'cheep',\n",
+       " u'perfume': u'aroma',\n",
+       " u'person': u'person',\n",
+       " u'perspective': u'position',\n",
+       " u'phase': u'phase',\n",
+       " u'phone': u'telephone',\n",
+       " u'photo': u'photograph',\n",
+       " u'photograph': u'photograph',\n",
+       " u'physician': u'doctor',\n",
+       " u'pic': u'movie',\n",
+       " u'pick': u'choice',\n",
+       " u'picket': u'lookout',\n",
+       " u'pile': u'pile',\n",
+       " u'piss': u'urine',\n",
+       " u'pit': u'pit',\n",
+       " u'place': u'topographic_point',\n",
+       " u'plan': u'plan',\n",
+       " u'plane': u'airplane',\n",
+       " u'play': u'play',\n",
+       " u'poop': u'crap',\n",
+       " u'pop': u'dad',\n",
+       " u'popsicle': u'ice_lolly',\n",
+       " u'porn': u'pornography',\n",
+       " u'porno': u'pornography',\n",
+       " u'prance': u'strut',\n",
+       " u'prick': u'asshole',\n",
+       " u'prisoner': u'prisoner',\n",
+       " u'program': u'plan',\n",
+       " u'protector': u'defender',\n",
+       " u'puke': u'rotter',\n",
+       " u'pun': u'pun',\n",
+       " u'punk': u'hood',\n",
+       " u'rapture': u'ecstasy',\n",
+       " u'realm': u'kingdom',\n",
+       " u'religion': u'religion',\n",
+       " u'reply': u'answer',\n",
+       " u'result': u'consequence',\n",
+       " u'reverie': u'reverie',\n",
+       " u'risk': u'hazard',\n",
+       " u'roar': u'boom',\n",
+       " u'roaring': u'boom',\n",
+       " u'rock': u'rock',\n",
+       " u'rover': u'wanderer',\n",
+       " u'rug': u'rug',\n",
+       " u'rumor': u'rumor',\n",
+       " u'rumour': u'rumor',\n",
+       " u'salary': u'wage',\n",
+       " u'saloon': u'barroom',\n",
+       " u'savior': u'jesus',\n",
+       " u'saviour': u'jesus',\n",
+       " u'scent': u'aroma',\n",
+       " u'scheme': u'scheme',\n",
+       " u'score': u'mark',\n",
+       " u'scout': u'lookout',\n",
+       " u'scrap': u'bit',\n",
+       " u'scream': u'scream',\n",
+       " u'seashore': u'seashore',\n",
+       " u'sec': u'second',\n",
+       " u'second': u'second',\n",
+       " u'semen': u'semen',\n",
+       " u'shake': u'shingle',\n",
+       " u'shingle': u'shingle',\n",
+       " u'shit': u'crap',\n",
+       " u'shock': u'daze',\n",
+       " u'shooting': u'shooting',\n",
+       " u'shop': u'shop',\n",
+       " u'shot': u'shooting',\n",
+       " u'shout': u'cry',\n",
+       " u'shriek': u'scream',\n",
+       " u'sis': u'sister',\n",
+       " u'sister': u'sister',\n",
+       " u'skank': u'filth',\n",
+       " u'skunk': u'rotter',\n",
+       " u'sleep': u'sleep',\n",
+       " u'slug': u'bullet',\n",
+       " u'slumber': u'sleep',\n",
+       " u'smash': u'knock',\n",
+       " u'smile': u'smile',\n",
+       " u'smoke': u'smoke',\n",
+       " u'snitch': u'fink',\n",
+       " u'sofa': u'sofa',\n",
+       " u'somebody': u'person',\n",
+       " u'sort': u'kind',\n",
+       " u'spark': u'flicker',\n",
+       " u'speaker': u'speaker',\n",
+       " u'spell': u'enchantment',\n",
+       " u'spot': u'topographic_point',\n",
+       " u'spring': u'spring',\n",
+       " u'springtime': u'spring',\n",
+       " u'stage': u'phase',\n",
+       " u'stamp': u'cast',\n",
+       " u'stand': u'base',\n",
+       " u'step': u'measure',\n",
+       " u'stillness': u'hush',\n",
+       " u'stone': u'rock',\n",
+       " u'store': u'shop',\n",
+       " u'story': u'narrative',\n",
+       " u'strategy': u'scheme',\n",
+       " u'strut': u'strut',\n",
+       " u'stuff': u'material',\n",
+       " u'stumble': u'lurch',\n",
+       " u'style': u'manner',\n",
+       " u'subject': u'subject',\n",
+       " u'suburb': u'suburb',\n",
+       " u'suburbia': u'suburb',\n",
+       " u'sucker': u'chump',\n",
+       " u'summer': u'summer',\n",
+       " u'summertime': u'summer',\n",
+       " u'sundown': u'sunset',\n",
+       " u'sunlight': u'sunlight',\n",
+       " u'sunrise': u'dawn',\n",
+       " u'sunset': u'sunset',\n",
+       " u'sunshine': u'sunlight',\n",
+       " u'superstar': u'ace',\n",
+       " u'swearing': u'curse',\n",
+       " u'sweetheart': u'sweetheart',\n",
+       " u'sweetie': u'sweetheart',\n",
+       " u'tale': u'narrative',\n",
+       " u'talker': u'speaker',\n",
+       " u'telephone': u'telephone',\n",
+       " u'thought': u'idea',\n",
+       " u'thousand': u'thousand',\n",
+       " u'threat': u'menace',\n",
+       " u'thug': u'hood',\n",
+       " u'thunder': u'boom',\n",
+       " u'thunderbolt': u'thunderbolt',\n",
+       " u'tit': u'breast',\n",
+       " u'titty': u'breast',\n",
+       " u'topic': u'subject',\n",
+       " u'torture': u'anguish',\n",
+       " u'touch': u'touch',\n",
+       " u'touching': u'touch',\n",
+       " u'tragedy': u'calamity',\n",
+       " u'trance': u'enchantment',\n",
+       " u'trickle': u'drip',\n",
+       " u'try': u'attempt',\n",
+       " u'tune': u'tune',\n",
+       " u'tush': u'buttocks',\n",
+       " u'twilight': u'twilight',\n",
+       " u'universe': u'universe',\n",
+       " u'urine': u'urine',\n",
+       " u'vacation': u'vacation',\n",
+       " u'vanity': u'amour_propre',\n",
+       " u'view': u'position',\n",
+       " u'violin': u'violin',\n",
+       " u'vocation': u'career',\n",
+       " u'wage': u'wage',\n",
+       " u'waist': u'waist',\n",
+       " u'waistline': u'waist',\n",
+       " u'walk': u'walk',\n",
+       " u'walking': u'walk',\n",
+       " u'wanderer': u'wanderer',\n",
+       " u'warranty': u'guarantee',\n",
+       " u'way': u'manner',\n",
+       " u'whiz': u'ace',\n",
+       " u'wino': u'drunkard',\n",
+       " u'wizard': u'ace',\n",
+       " u'wordplay': u'pun',\n",
+       " u'world': u'universe',\n",
+       " u'worry': u'concern',\n",
+       " u'yack': u'yak',\n",
+       " u'yearning': u'longing',\n",
+       " u'yell': u'cry',\n",
+       " u'yesteryear': u'past',\n",
+       " u'zero': u'nothing',\n",
+       " u'zip': u'nothing'}"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cnsh_dict"
+   ]
   }
  ],
  "metadata": {
