--- a/notebooks/mj/Vector-Ensemble.ipynb
+++ b/notebooks/mj/Vector-Ensemble.ipynb
@@ -383,94 +383,94 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2478</th>\n",
-       "      <td>2478</td>\n",
-       "      <td>79</td>\n",
-       "      <td>1994</td>\n",
+       "      <th>4453</th>\n",
+       "      <td>4453</td>\n",
+       "      <td>54</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Hot_Nigga</td>\n",
+       "      <td>Hot Boy</td>\n",
+       "      <td>Bobby Shmurda</td>\n",
+       "      <td>And Chewy, I'm some hot nigga Like I talk to S...</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>2014-54</td>\n",
+       "      <td>http://lyrics.wikia.com/index.php?title=Bobby_...</td>\n",
+       "      <td>And Chewy, I'm some hot nigga Like I talk to S...</td>\n",
+       "      <td>nigga twirl drop milli block niggas glock shot...</td>\n",
+       "      <td>hot wilding busy fifth shorty little sick sava...</td>\n",
+       "      <td>argon asshole ball bark bash bitch block body ...</td>\n",
+       "      <td>barbarous busy dense fifth free hot ill small ...</td>\n",
+       "      <td>argon asshole ball bark bash bitch block body ...</td>\n",
+       "      <td>barbarous busy dense fifth free hot ill small ...</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>75</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>345</th>\n",
+       "      <td>345</td>\n",
+       "      <td>46</td>\n",
+       "      <td>1973</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/I%27m_Doin%27_Fi...</td>\n",
+       "      <td>I'm Doin' Fine Now</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>Remember the day you up and left. I nearly cri...</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>1973-46</td>\n",
+       "      <td>http://lyrics.wikia.com/New_York_City:I%27m_Do...</td>\n",
+       "      <td>Remember the day you up and left. I nearly cri...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Beautiful in My Eyes</td>\n",
-       "      <td>Joshua Kadison</td>\n",
-       "      <td>You're my peace of mind. In this crazy world. ...</td>\n",
-       "      <td>1990</td>\n",
-       "      <td>1994-79</td>\n",
-       "      <td>http://lyrics.wikia.com/Joshua_Kadison:Beautif...</td>\n",
-       "      <td>You're my peace of mind. In this crazy world. ...</td>\n",
-       "      <td>world eye year love</td>\n",
-       "      <td>crazy beautiful passing true</td>\n",
-       "      <td>eye love universe year</td>\n",
-       "      <td>beautiful brainsick ephemeral true</td>\n",
-       "      <td>eye love universe year</td>\n",
-       "      <td>beautiful brainsick ephemeral true</td>\n",
-       "      <td>80</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>100</td>\n",
+       "      <td>50</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4009</th>\n",
-       "      <td>4009</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Break_Your_Heart</td>\n",
-       "      <td>Break Your Heart</td>\n",
-       "      <td>Taio Cruz</td>\n",
-       "      <td>Whoa, whoa. Luda! Now I may not be the worst o...</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>2010-10</td>\n",
-       "      <td>http://lyrics.wikia.com/Taio_Cruz:Break_Your_H...</td>\n",
-       "      <td>Whoa, whoa. Luda! Now I may not be the worst o...</td>\n",
-       "      <td>piece tryin wolf bone</td>\n",
-       "      <td>splatter little bitty real big bad</td>\n",
-       "      <td>bone piece wolf</td>\n",
-       "      <td>bad bitty large real small</td>\n",
-       "      <td>bone piece wolf</td>\n",
-       "      <td>bad bitty large real small</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>25</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2307</th>\n",
-       "      <td>2307</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1993</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Dreamlover_(song)</td>\n",
-       "      <td>Dreamlover</td>\n",
-       "      <td>Mariah Carey</td>\n",
-       "      <td>Ooh. Doo doo doo doo doo doo doo. Ooh, baby. D...</td>\n",
+       "      <th>2131</th>\n",
+       "      <td>2131</td>\n",
+       "      <td>32</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Do Anything</td>\n",
+       "      <td>Natural Selection</td>\n",
+       "      <td>Feat. Niki Haris Do anything Oh yeah Whatcha g...</td>\n",
        "      <td>1990</td>\n",
-       "      <td>1993-8</td>\n",
-       "      <td>http://lyrics.wikia.com/Mariah_Carey:Dreamlover</td>\n",
-       "      <td>Ooh. Doo doo doo doo doo doo doo. Ooh, baby. D...</td>\n",
-       "      <td>somebody night rescue</td>\n",
-       "      <td>uplifting long lonely come</td>\n",
-       "      <td>night person rescue</td>\n",
-       "      <td>alone long</td>\n",
-       "      <td>night person rescue</td>\n",
-       "      <td>alone long</td>\n",
-       "      <td>10</td>\n",
+       "      <td>1991-32</td>\n",
+       "      <td>http://lyrics.wikia.com/index.php?title=Natura...</td>\n",
+       "      <td>Feat. Niki Haris Do anything Oh yeah Whatcha g...</td>\n",
+       "      <td>love talk lady touch thing telephone wait yes ...</td>\n",
+       "      <td>lttle nasty loving tough long strong wont real...</td>\n",
+       "      <td>affection attentiveness baby brand bread choic...</td>\n",
+       "      <td>ageless brainsick long loving nasty natural re...</td>\n",
+       "      <td>affection attentiveness baby brand bread choic...</td>\n",
+       "      <td>ageless brainsick long loving nasty natural re...</td>\n",
+       "      <td>40</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>25</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      index  position  year                                       title.href                 title          artist                                             lyrics  decade song_key                                         lyrics_url                                    lyrics_abstract            noun_vector                          adj_vector         noun_syn_vector                      adj_syn_vector    noun_syn_hype_vector                 adj_syn_hype_vector  bin_10_percent  \\\n",
-       "2478   2478        79  1994                                              NaN  Beautiful in My Eyes  Joshua Kadison  You're my peace of mind. In this crazy world. ...    1990  1994-79  http://lyrics.wikia.com/Joshua_Kadison:Beautif...  You're my peace of mind. In this crazy world. ...    world eye year love        crazy beautiful passing true  eye love universe year  beautiful brainsick ephemeral true  eye love universe year  beautiful brainsick ephemeral true              80   \n",
-       "4009   4009        10  2010   https://en.wikipedia.org/wiki/Break_Your_Heart      Break Your Heart       Taio Cruz  Whoa, whoa. Luda! Now I may not be the worst o...    2010  2010-10  http://lyrics.wikia.com/Taio_Cruz:Break_Your_H...  Whoa, whoa. Luda! Now I may not be the worst o...  piece tryin wolf bone  splatter little bitty real big bad         bone piece wolf          bad bitty large real small         bone piece wolf          bad bitty large real small              10   \n",
-       "2307   2307         8  1993  https://en.wikipedia.org/wiki/Dreamlover_(song)            Dreamlover    Mariah Carey  Ooh. Doo doo doo doo doo doo doo. Ooh, baby. D...    1990   1993-8    http://lyrics.wikia.com/Mariah_Carey:Dreamlover  Ooh. Doo doo doo doo doo doo doo. Ooh, baby. D...  somebody night rescue          uplifting long lonely come     night person rescue                          alone long     night person rescue                          alone long              10   \n",
+       "      index  position  year                                         title.href               title             artist                                             lyrics  decade song_key                                         lyrics_url                                    lyrics_abstract                                        noun_vector                                         adj_vector                                    noun_syn_vector                                     adj_syn_vector  \\\n",
+       "4453   4453        54  2014            https://en.wikipedia.org/wiki/Hot_Nigga             Hot Boy      Bobby Shmurda  And Chewy, I'm some hot nigga Like I talk to S...    2010  2014-54  http://lyrics.wikia.com/index.php?title=Bobby_...  And Chewy, I'm some hot nigga Like I talk to S...  nigga twirl drop milli block niggas glock shot...  hot wilding busy fifth shorty little sick sava...  argon asshole ball bark bash bitch block body ...  barbarous busy dense fifth free hot ill small ...   \n",
+       "345     345        46  1973  https://en.wikipedia.org/wiki/I%27m_Doin%27_Fi...  I'm Doin' Fine Now      New York City  Remember the day you up and left. I nearly cri...    1970  1973-46  http://lyrics.wikia.com/New_York_City:I%27m_Do...  Remember the day you up and left. I nearly cri...                                                NaN                                                NaN                                                NaN                                                NaN   \n",
+       "2131   2131        32  1991                                                NaN         Do Anything  Natural Selection  Feat. Niki Haris Do anything Oh yeah Whatcha g...    1990  1991-32  http://lyrics.wikia.com/index.php?title=Natura...  Feat. Niki Haris Do anything Oh yeah Whatcha g...  love talk lady touch thing telephone wait yes ...  lttle nasty loving tough long strong wont real...  affection attentiveness baby brand bread choic...  ageless brainsick long loving nasty natural re...   \n",
        "\n",
-       "      is_top_50_percent  is_top_25_percent  bin_25_percent  is_top_10_percent  \n",
-       "2478                  0                  0             100                  0  \n",
-       "4009                  1                  1              25                  1  \n",
-       "2307                  1                  1              25                  1  "
+       "                                   noun_syn_hype_vector                                adj_syn_hype_vector  bin_10_percent  is_top_50_percent  is_top_25_percent  bin_25_percent  is_top_10_percent  \n",
+       "4453  argon asshole ball bark bash bitch block body ...  barbarous busy dense fifth free hot ill small ...              60                  0                  0              75                  0  \n",
+       "345                                                 NaN                                                NaN              50                  1                  0              50                  0  \n",
+       "2131  affection attentiveness baby brand bread choic...  ageless brainsick long loving nasty natural re...              40                  1                  0              50                  0  "
       ]
      },
      "execution_count": 13,
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
