Really final, PositiveNaiveBayesClassifier by genre

--- a/notebooks/ss/PositiveNaiveBayesClassifier.ipynb
+++ b/notebooks/ss/PositiveNaiveBayesClassifier.ipynb
@@ -359,84 +359,100 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Baseline pct. predicting all negative: 0.869147659064\n",
+      "Baseline pct. predicting all negative: 0.86962785114 \n",
+      "\n",
+      "\n",
       "Prior:  0.01\n",
       "true positive:  37\n",
-      "false positive:  72\n",
-      "false negative:  1598\n",
-      "true negative:  10788\n",
+      "false positive:  69\n",
+      "false negative:  1592\n",
+      "true negative:  10797\n",
       "total observations:  12495\n",
-      "pct correct:  0.866346538615 \n",
+      "pct correct:  0.867066826731 \n",
       "\n",
       "\n",
-      "Baseline pct. predicting all negative: 0.869147659064\n",
+      "Baseline pct. predicting all negative: 0.86962785114 \n",
+      "\n",
+      "\n",
       "Prior:  0.02\n",
-      "true positive:  67\n",
-      "false positive:  132\n",
-      "false negative:  1568\n",
-      "true negative:  10728\n",
-      "total observations:  12495\n",
-      "pct correct:  0.863945578231 \n",
-      "\n",
-      "\n",
-      "Baseline pct. predicting all negative: 0.869147659064\n",
-      "Prior:  0.03\n",
       "true positive:  77\n",
-      "false positive:  187\n",
-      "false negative:  1558\n",
-      "true negative:  10673\n",
+      "false positive:  113\n",
+      "false negative:  1552\n",
+      "true negative:  10753\n",
       "total observations:  12495\n",
-      "pct correct:  0.860344137655 \n",
+      "pct correct:  0.866746698679 \n",
       "\n",
       "\n",
-      "Baseline pct. predicting all negative: 0.869147659064\n",
+      "Baseline pct. predicting all negative: 0.86962785114 \n",
+      "\n",
+      "\n",
+      "Prior:  0.03\n",
+      "true positive:  111\n",
+      "false positive:  195\n",
+      "false negative:  1518\n",
+      "true negative:  10671\n",
+      "total observations:  12495\n",
+      "pct correct:  0.862905162065 \n",
+      "\n",
+      "\n",
+      "Baseline pct. predicting all negative: 0.86962785114 \n",
+      "\n",
+      "\n",
       "Prior:  0.05\n",
-      "true positive:  124\n",
-      "false positive:  336\n",
-      "false negative:  1511\n",
-      "true negative:  10524\n",
+      "true positive:  116\n",
+      "false positive:  382\n",
+      "false negative:  1513\n",
+      "true negative:  10484\n",
       "total observations:  12495\n",
-      "pct correct:  0.852180872349 \n",
+      "pct correct:  0.848339335734 \n",
       "\n",
       "\n",
-      "Baseline pct. predicting all negative: 0.869147659064\n",
+      "Baseline pct. predicting all negative: 0.86962785114 \n",
+      "\n",
+      "\n",
       "Prior:  0.1\n",
-      "true positive:  185\n",
-      "false positive:  748\n",
-      "false negative:  1450\n",
-      "true negative:  10112\n",
+      "true positive:  217\n",
+      "false positive:  845\n",
+      "false negative:  1412\n",
+      "true negative:  10021\n",
       "total observations:  12495\n",
-      "pct correct:  0.824089635854 \n",
+      "pct correct:  0.819367747099 \n",
       "\n",
       "\n",
-      "Baseline pct. predicting all negative: 0.869147659064\n",
+      "Baseline pct. predicting all negative: 0.86962785114 \n",
+      "\n",
+      "\n",
       "Prior:  0.2\n",
-      "true positive:  390\n",
-      "false positive:  2007\n",
-      "false negative:  1245\n",
-      "true negative:  8853\n",
+      "true positive:  426\n",
+      "false positive:  2073\n",
+      "false negative:  1203\n",
+      "true negative:  8793\n",
       "total observations:  12495\n",
-      "pct correct:  0.739735894358 \n",
+      "pct correct:  0.73781512605 \n",
       "\n",
       "\n",
-      "Baseline pct. predicting all negative: 0.869147659064\n",
+      "Baseline pct. predicting all negative: 0.86962785114 \n",
+      "\n",
+      "\n",
       "Prior:  0.3\n",
-      "true positive:  632\n",
-      "false positive:  3252\n",
-      "false negative:  1003\n",
-      "true negative:  7608\n",
+      "true positive:  680\n",
+      "false positive:  3376\n",
+      "false negative:  949\n",
+      "true negative:  7490\n",
       "total observations:  12495\n",
-      "pct correct:  0.659463785514 \n",
+      "pct correct:  0.653861544618 \n",
       "\n",
       "\n",
-      "Baseline pct. predicting all negative: 0.869147659064\n",
+      "Baseline pct. predicting all negative: 0.86962785114 \n",
+      "\n",
+      "\n",
       "Prior:  0\n",
-      "true positive:  113\n",
-      "false positive:  180\n",
-      "false negative:  1522\n",
-      "true negative:  10680\n",
+      "true positive:  98\n",
+      "false positive:  196\n",
+      "false negative:  1531\n",
+      "true negative:  10670\n",
       "total observations:  12495\n",
-      "pct correct:  0.863785514206 \n",
+      "pct correct:  0.861784713886 \n",
       "\n",
       "\n"
      ]
@@ -533,11 +549,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Rock_music\n",
       "Pop_rock\n",
       "Soft_rock\n",
       "Country_music\n",
       "Hard_rock\n",
-      "Wall time: 40.4 s\n"
+      "Wall time: 42.6 s\n"
      ]
     }
    ],
@@ -577,10 +594,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Pop_music\n",
       "Hip_hop_music\n",
       "Contemporary_R%26B\n",
       "Rock_music\n",
-      "Pop_rock\n",
       "Soft_rock\n",
       "Country_music\n",
       "Rhythm_and_blues\n",
@@ -588,8 +605,7 @@
       "Funk\n",
       "Hard_rock\n",
       "Dance-pop\n",
-      "Dance_music\n",
-      "Disco\n"
+      "Dance_music\n"
      ]
     }
    ],
@@ -623,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
